cluster/apps/default/changedetection/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: changedetection
  namespace: default
  labels:
    app: changedetection
spec:
  replicas: 1
  selector:
    matchLabels:
      app: changedetection
  template:
    metadata:
      labels:
        app: changedetection
    spec:
      containers:
        - name: changedetection
          image: ghcr.io/dgtlmoon/changedetection.io:0.50.26
          ports:
            - containerPort: 5000
              name: http
          volumeMounts:
            - name: changedetection-data
              mountPath: /datastore
          resources:
            requests:
              memory: 256Mi
              cpu: 100m
        - name: browser-sockpuppet-chrome
          image: dgtlmoon/sockpuppetbrowser:latest
          ports:
            - containerPort: 3000
              name: playwright
          securityContext:
            capabilities:
              add:
                - SYS_ADMIN
          resources:
            requests:
              memory: 256Mi
              cpu: 200m
      volumes:
        - name: changedetection-data
          persistentVolumeClaim:
            claimName: changedetection-data
