cluster/apps/default/changedetection/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: changedetection
  namespace: default
  labels:
    app: changedetection
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
      name: http
  selector:
    app: changedetection
