cluster/apps/default/changedetection/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: changedetection
  namespace: default
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/icon: "eye"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    external-dns.alpha.kubernetes.io/target: "${SECRET_CLOUDFLARE_TUNNEL_DOMAIN}"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    traefik.ingress.kubernetes.io/router.middlewares: "networking-cloudflarewarp@kubernetescrd,networking-authentik@kubernetescrd"
    external-dns/external: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - change.${SECRET_LAB_DOMAIN}
      secretName: "${SECRET_LAB_DOMAIN/./-}-tls"
  rules:
    - host: change.${SECRET_LAB_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: changedetection
                port:
                  number: 80
